--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
       "type": "node",
       "request": "launch",
       "name": "Launch Program",
-      "program": "${workspaceFolder}/index.js",
+      "program": "${workspaceFolder}/index-extract.js",
       "cwd": "/Users/Abdulrahman/Projects/general/web/simpleng-test",
       "args": ["--outFile", "locale/messages.ar.xlf"]
     }
