--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "xi18n-plus",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Leveled-up Angular xi18n tool",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build-ts": "tsc",
+    "watch-ts": "tsc -w"
   },
   "repository": {
     "type": "git",
@@ -19,8 +20,7 @@
   "author": "Abdulrahman M. Alomar",
   "license": "MIT",
   "bin": {
-    "xi18n-plus": "./index.js",
-    "xi18n-plus-extract": "./index-extract.js"
+    "xi18n-plus": "./dist/index.js"
   },
   "bugs": {
     "url": "https://github.com/alomardev/xi18n-plus/issues"
@@ -31,6 +31,7 @@
     "lodash": "^4.17.11"
   },
   "devDependencies": {
-    "@types/fs-extra": "^5.0.5"
+    "@types/fs-extra": "^5.0.5",
+    "typescript": "^3.4.1"
   }
 }
