--- a/package.json
+++ b/package.json
@@ -20,7 +20,13 @@
   "author": "Abdulrahman M. Alomar",
   "license": "MIT",
   "bin": {
-    "xi18n-plus": "./dist/index.js"
+    "xi18n-plus": "./dist/index.js",
+    "xi18n-plus-serve": "./dist/index-serve.js",
+    "xi18n-plus-export": "./dist/index-export.js",
+    "xi18n-plus-import": "./dist/index-import.js",
+    "xi18n-plus-add": "./dist/index-add.js",
+    "xi18n-plus-update": "./dist/index-update.js",
+    "xi18n-plus-delete": "./dist/index-delete.js"
   },
   "bugs": {
     "url": "https://github.com/alomardev/xi18n-plus/issues"
