--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "homepage": "https://github.com/alomardev/xi18n-plus#readme",
   "dependencies": {
     "commander": "^2.19.0",
+    "csv-parser": "^2.2.0",
     "lodash": "^4.17.11"
   },
   "devDependencies": {
