--- a/.gitignore
+++ b/.gitignore
@@ -153,3 +153,6 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.gitignore.io/api/node,macos,windows,visualstudiocode
+
+# Distributable files
+dist/
