--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xi18n-plus",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Leveled-up Angular xi18n tool",
   "main": "index.js",
   "scripts": {
@@ -35,10 +35,12 @@
   "dependencies": {
     "commander": "^2.19.0",
     "csv-parser": "^2.2.0",
-    "lodash": "^4.17.11"
+    "fast-xml-parser": "^3.12.16",
+    "he": "^1.2.0"
   },
   "devDependencies": {
     "@types/fs-extra": "^5.0.5",
+    "@types/he": "^1.1.0",
     "typescript": "^3.4.1"
   }
 }
