--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,7 @@
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
+
     {
       "type": "node",
       "request": "launch",
@@ -27,6 +28,17 @@
         "--only-new",
         "-i",
         "src/locale/translations.csv",
+        "src/locale/messages.ar.xlf",
+        "src/locale/messages.en.xlf",
+      ]
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Add",
+      "program": "${workspaceFolder}/dist/index-add.js",
+      "cwd": "/Users/Abdulrahman/Projects/general/web/simpleng-test",
+      "args": [
         "src/locale/messages.ar.xlf",
         "src/locale/messages.en.xlf",
       ]
