--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
       "type": "node",
       "request": "launch",
       "name": "Export",
-      "program": "${workspaceFolder}/dist/index-export.js",
+      "program": "${workspaceFolder}/dist/xi18n-plus-export.js",
       "cwd": "/Users/Abdulrahman/Projects/general/web/simpleng-test",
       "args": [
         "-o",
@@ -22,7 +22,7 @@
       "type": "node",
       "request": "launch",
       "name": "Import",
-      "program": "${workspaceFolder}/dist/index-import.js",
+      "program": "${workspaceFolder}/dist/xi18n-plus-import.js",
       "cwd": "/Users/Abdulrahman/Projects/general/web/simpleng-test",
       "args": [
         "--only-new",
@@ -36,7 +36,7 @@
       "type": "node",
       "request": "launch",
       "name": "Add",
-      "program": "${workspaceFolder}/dist/index-add.js",
+      "program": "${workspaceFolder}/dist/xi18n-plus-add.js",
       "cwd": "/Users/Abdulrahman/Projects/general/web/simpleng-test",
       "args": [
         "src/locale/messages.ar.xlf",
