--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "xi18n-plus",
-  "version": "0.1.8",
+  "version": "0.2.0",
   "description": "Leveled-up Angular xi18n tool",
-  "main": "./dist/xi18n-plus.js",
+  "main": "./dist/src/xi18n-plus.js",
   "scripts": {
     "build-ts": "tsc",
     "watch-ts": "tsc -w",
-    "upload": "rm -r dist && npm run build-ts && npm publish"
+    "upload": "rm -r -f dist && tsc --sourceMap false && node package.js && cd web-client && ng build --prod && cd .. && npm publish dist"
   },
   "repository": {
     "type": "git",
@@ -21,7 +21,7 @@
   "author": "Abdulrahman M. Alomar",
   "license": "MIT",
   "bin": {
-    "xi18n-plus": "./dist/xi18n-plus.js"
+    "xi18n-plus": "./dist/src/xi18n-plus.js"
   },
   "bugs": {
     "url": "https://github.com/alomardev/xi18n-plus/issues"
@@ -30,10 +30,12 @@
   "dependencies": {
     "commander": "^2.20.0",
     "csv-parser": "^2.2.0",
+    "express": "^4.16.4",
     "fast-xml-parser": "^3.12.16",
     "he": "^1.2.0"
   },
   "devDependencies": {
+    "@types/express": "^4.16.1",
     "@types/fs-extra": "^5.0.5",
     "@types/he": "^1.1.0",
     "typescript": "^3.4.1"
