--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
     "noImplicitAny": true,
     "moduleResolution": "node",
     "sourceMap": true,
-    "outDir": "dist",
+    "resolveJsonModule": true,
+    "outDir": "dist/src",
     "baseUrl": ".",
     "paths": {
       "*": [
